webkit text clipping fix

--- a/assets/css/spike.css
+++ b/assets/css/spike.css
@@ -488,6 +488,7 @@ background-image: linear-gradient(
   hsl(0deg 100% 15%) 100%
 );
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
   
 }
